--- a/agent/package.json
+++ b/agent/package.json
@@ -8,36 +8,12 @@
     "build": "frida-compile src -o dist.js",
     "watch": "frida-compile src -o dist.js --watch"
   },
-  "browserify": {
-    "transform": [
-      [
-        "babelify",
-        {
-          "presets": [
-            [
-              "es2015",
-              {
-                "loose": true
-              }
-            ]
-          ],
-          "plugins": [
-            "transform-runtime",
-            "transform-regenerator",
-            "transform-async-functions"
-          ]
-        }
-      ]
-    ]
-  },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "macho": "^1.3.0"
   },
   "devDependencies": {
-    "frida-compile": "^5.3.7",
-    "babel-plugin-transform-async-functions": "^6.22.0",
-    "babel-plugin-transform-regenerator": "^6.26.0"
+    "frida-compile": "^9.0.8"
   }
 }
